uninstall endpoint
